localized/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* raleway-regular - latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  src: url('./fonts/raleway-v17-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('./fonts/raleway-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('./fonts/raleway-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('./fonts/raleway-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('./fonts/raleway-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('./fonts/raleway-v17-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
}

.wrapper{
  display: grid;
  grid-template-columns: 50% 50%;
}

.logo {
  margin-right: 500px;
  padding: 10px;
}

.rightColumn img {
  margin-left: auto;
  margin-right: auto;
  margin-top: 75px;
}

.welcomeNavBar {
  width: 55%;
  overflow: auto;
  margin-top: 30px;
  margin-left: 350px;
  display: flex;
  flex-flow: row;
  border-style: solid;
  border-width: 2px;
  border-color: #0078D4;
  border-top: none;
  border-left: none;
  border-right: none;
}

.welcomeNavBar img {
  padding: 10px;
  float: inherit;
  margin-top: auto;
  margin-bottom: auto;
}

.welcomeNavBar .largeTablet {
  margin-left: 0px;
  margin-right: 15px;
}

.welcomeNavBar .navButton:hover {
  -webkit-filter: brightness(90%) !important;
  filter: brightness(90%);
  cursor: pointer;
}

.welcomeCarousel {
  margin-top: 400px;
  height: 600px;
}

.carousel {
  margin-left: 200px;
  margin-right: 20px;
  margin-top: 200px;
  width: 80%;
  height: 90%;

}

.carousel-indicators {
  top: 400px !important;
}

.carousel-indicators li {
  border-radius: 50%;
  height: 20px !important;
  width: 20px !important;
  background-color: darkgrey !important;
}

.carousel-indicators .active {
  background-color: #0078D4 !important;
}

.carousel h1,h3 {
  font-family: 'Raleway';
  color: #0078D4;
}

.carousel h1 {
  font-size: 72px;
}

.carousel-item {
  margin-bottom: 10px;
}
/*  beginning of styling for the cards in my content page */
.card{
  box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 18px;
  transition: .2s;
  height: 32rem;
}

.card:hover{
  transform: scale(1.1);
  opacity: 1;
}

.card img{
  border-radius: 18px 18px 0px 0px;
  height: 51%;
  width:100%;
}

.card button:hover{
  background-color: #0078D4;
}

.card button{
  margin-left:40%;
  background-color: #18A0FB;
  border: 2px solid #116FB0;
  border-radius: 6px;
  text-transform: lowercase;
  width: 40%;
  margin-left: 200px;
}

.card-deck{
  width: 70%;
  min-width: 75%;
  margin-left: 260px;
  margin-top: 30px;
}

/*  end of styling for the cards in my content page */

/* horizontal rule below each section heading on my content page */
hr{
  border: 0.5px solid black;
  width: 90px;
  margin-right: 62%;
  margin-top: 2px;
  
}

/* styling for section haading text on my content page  */
.p{
  margin-top: 50px;
  margin-right: 40%;
  font-size: 22px;
}

/* beginning span tag housing small name tags for the article card */
span{
  border-radius: 26px;
  height: 40px;
  text-align: center;
  position: absolute;
  left:58%;
  top: 3%;
  font-size: 18px;
  width: 150px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  color: white;
  padding-top: 4px;
}

.voting{
  border: 2px solid #0CA6AE;
  background-color: #0CA6AE;
}

.school{
  border: 2px solid #EC6A5F;
  background-color: #EC6A5F;

}

.protest{
  border: 2px solid #F5BF4F;
  background-color: #F5BF4F;
}
/*end of span tag housing small name tags for the article card */

.footer{
  position: fixed;
  left: 0;
  bottom: 0;
  background-color: #0078D4;
  width: 100%;
  color: white;
  text-align: center;
}

.bi .bi-newspaper{
  background-color: blue;
}

/* CSS styling for the local news row */
.LocalNews{
  margin-top: 50px;
  margin-right: 40%;
  font-size: 22px;
}

.LocalNewsTitle{
  margin-right:14%;
}

/* positioning the line below the title */
.lineTitle{
  margin-right: 62%;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.column {
  float: left;
  width: 50%;
}

